# lux-railway-map-overlay

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  biome.json  docker-compose.yml  pyproject.toml  renovate.json
.config/: dotnet-tools.json
.github/workflows/: publish-image.yml  validate.yml  zizmor.yml
charts/lux-railway-map-overlay/: Chart.yaml  README.md  values.yaml
charts/lux-railway-map-overlay/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  (+6 more)
docs/: consumer-integration.md  developer-pipeline.md
scripts/: Dockerfile  osmconf.ini  requirements.txt
scripts/generator/: __init__.py  __main__.py  config.py  console.py  layer_specs.py  normalization.py  pipeline.py  pipeline_exports.py  pipeline_reporting.py  pipeline_sources.py  pipeline_support.py  pipeline_tiles.py  platform_references.py  route_display.py  route_graph.py  route_naming.py  routes.py
styles/: style.json
tests/generator/: test_console.py  test_main.py  test_normalization.py  test_pipeline.py  test_pipeline_exports.py  test_pipeline_reporting.py  test_pipeline_sources.py  test_pipeline_support.py  test_pipeline_tiles.py  test_route_display.py  test_route_graph.py  test_routes.py  test_style_contract.py
tiles/: Dockerfile  Dockerfile.bundle  entrypoint.sh  nginx.conf
tiles/glyphs/: generate-glyphs.sh
viewer/: App.razor  Dockerfile.dev  Program.cs  RailwayViewer.csproj  RailwayViewer.slnx  _Imports.razor  nginx.conf
viewer/Pages/: Home.razor
viewer/wwwroot/: appsettings.json  index.html
(+1 files in other folders)
